syntax = "proto3";
package dymensionxyz.dymension.lockdrop;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "dymension/lockdrop/incentives.proto";

option go_package = "github.com/dymensionxyz/dymension/x/lockdrop/types";

// GenesisState defines the pool incentives module's genesis state.
message GenesisState {
  // params defines all the paramaters of the module.
  Params params = 1 [ (gogoproto.nullable) = false ];
  DistrInfo distr_info = 2 [
    (gogoproto.nullable) = true,
    (gogoproto.moretags) = "yaml:\"distr_info\""
  ];
}
