syntax = "proto3";
package dymensionxyz.dymension.lockdrop;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/dymensionxyz/dymension/x/lockdrop/types";

message Params {
  option (gogoproto.goproto_stringer) = false;

  // minted_denom is the denomination of the coin expected to be used for incentives
  string minted_denom = 1 [ (gogoproto.moretags) = "yaml:\"minted_denom\"" ];
}

message DistrInfo {
  string total_weight = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.moretags) = "yaml:\"total_weight\"",
    (gogoproto.nullable) = false
  ];
  repeated DistrRecord records = 2 [ (gogoproto.nullable) = false ];
}

message DistrRecord {
  option (gogoproto.equal) = true;

  uint64 gauge_id = 1 [ (gogoproto.moretags) = "yaml:\"gauge_id\"" ];
  string weight = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}
